# desbordante-web

./: .dockerignore  .env.example  .eslintrc.json  .gitignore  .gitmodules  .prettierrc  CMakeLists.txt  Dockerfile-cpp-consumer  README.md  build.sh  docker-compose.yml  install_web.sh  jest.config.ts  nginx.conf  package-lock.json  package.json  pnpm-lock.yaml
.github/workflows/: check-fronted-lint.yml  check-frontend-build.yml  check-frontend-lint.yml  clang-format-check.yml  deploy.yml
cpp-consumer/: CMakeLists.txt  CMakeLists2.txt  CMakeLists3.txt  Dockerfile-cpp-consumer  build.sh  main.cpp  s.txt
cpp-consumer/db/: DBManager.h  DbManager.h  FieldWrapper.cpp  FieldWrapper.h  SpecificDbManager.h  TaskConfig.cpp  TaskConfig.h  db_manager.h  enums.h  field_wrapper.cpp  field_wrapper.h  names_resolvers.h  raw_query.h  result_fields.h  specific_db_manager.h  task_config.cpp  task_config.h
cpp-consumer/old/db/: db_manager.h  field_wrapper.h
cpp-consumer/old/task-processors/: task_processor.cpp
cpp-consumer/option/: algo_options.h  descriptions.h  names.h
cpp-consumer/src/: main.cpp  main_cp.cpp
cpp-consumer/src/data/: database.cpp  database.h  params_loader.cpp  params_loader.h
cpp-consumer/src/process/: all_executors.h  task_processor.cpp  task_processor.h
cpp-consumer/src/process/executors/: ar_executor.cpp  ar_executor.h  cfd_executor.cpp  cfd_executor.h  fd_executor.cpp  fd_executor.h  iexecutor.cpp  iexecutor.h  mfd_executor.cpp  mfd_executor.h  stats_executor.cpp  stats_executor.h
cpp-consumer/src/util/: overloaded.h  parse.h
cpp-consumer/stat-processors/: StatProcessor.cpp  StatProcessor.h
cpp-consumer/task-processors/: TaskProcessor.cpp  TaskProcessor.h  task_processor.cpp  task_processor.h
docs/: onboarding.md
kafka-consumer/: CMakeLists.txt
kafka-consumer/consumer/: TaskConsumer.cpp
kafka-consumer/db/: TaskConfig.h
python-consumer/: .dockerignore  Dockerfile  config.py  consumer.py  error_handlers.py  requirements.txt
src/: main.cpp
src/algorithms/: AlgoFactory.h  Algorithms.h  CFDAlgorithm.cpp  CFDAlgorithm.h  FDAlgorithm.cpp  FDAlgorithm.h  Fd_mine.cpp  TypoMiner.cpp  TypoMiner.h  algo_factory.h  algorithms.h  ar_algorithm.cpp  ar_algorithm.h  brute_force.cpp  brute_force.h  cfd_algorithm.cpp  cfd_algorithm.h  fd_algorithm.cpp  fd_algorithm.h  id_algorithm.h  ind_algorithm.h  legacy_primitive.h  pli_based_fd_algorithm.h  primitive.cpp  primitive.h  spider.cpp  spider.h  typo_miner.cpp  typo_miner.h
src/model/: AR.h  CFD.h  ColumnLayoutPartialRelationData.cpp  ColumnLayoutPartialRelationData.h  FD.h  PartialColumnData.cpp  PartialColumnData.h  PatternColumnData.cpp  PatternColumnData.h  PatternColumnLayoutRelationData.cpp  PatternColumnLayoutRelationData.h  RelationData.h  TuplePattern.h  Vertical.cpp  Vertical.h  ar.h  cfd.h  column_layout_partial_relation_data.cpp  column_layout_partial_relation_data.h  column_reader.h  cursor.h  fd.h  idataset_stream.h  partial_column_data.cpp  partial_column_data.h  pattern_column_data.cpp  pattern_column_data.h  pattern_column_layout_relation_data.cpp  pattern_column_layout_relation_data.h  relation_data.h  tuple_pattern.h  vertical.cpp  vertical.h
src/parser/: CSVParser.h  csv_parser.cpp  csv_parser.h
src/statistics/: CsvStats.cpp  Statistic.cpp  Statistic.h
src/util/: CLatticeLevel.cpp  CLatticeLevel.h  CLatticeVertex.cpp  CLatticeVertex.h  PartialPositionListIndex.cpp  PartialPositionListIndex.h  PatternPositionListIndex.cpp  PatternPositionListIndex.h  PositionListIndex.h  c_lattice_level.cpp  c_lattice_level.h  c_lattice_vertex.cpp  c_lattice_vertex.h  partial_position_list_index.cpp  partial_position_list_index.h  pattern_position_list_index.cpp  pattern_position_list_index.h  position_list_index.h
tests/: TestCTane.cpp  TestCsvStats.cpp  test_c_tane.cpp  test_ctane.cpp  test_id.cpp  test_ind.cpp  test_typo_miner.cpp
tests/inputData/: Cust.csv
tests/input_data/: CustSmall.csv  EmployeeSmall.csv  SimpleKeys.csv  Workshop.csv
web-app/: .dockerignore  Dockerfile-client  Dockerfile-cms  Dockerfile-postfix  Dockerfile-server  replace_env.sh  setup.sh
web-app/client/: .env  .env.example  .eslintrc.js  .eslintrc.json  .gitignore  .prettierrc.js  .stylelintignore  .stylelintrc  APIFunctions.tsx  README.md  apollo.config.js  client-envs  clients-envs  create_test.sh  custom.d.ts  db.json  graphql-schema.json  jest.config.js  jest.setup.js  next.config.js  package.json  proxy.config.js  test2FormUser.tsx  testForm.ts  testFormUserr.ts  tsconfig.aliases.json  tsconfig.json
web-app/cms/: .env.example  .gitignore  package.json  schema.graphql  tsconfig.json
web-app/grafana/: grafana.ini
web-app/postfix/: configure.sh  startup.sh
web-app/prometheus/: prometheus.yml
web-app/server/: .env  .eslintrc  .eslintrc.json  .gitignore  codegen.test.yml  codegen.yml  package.json  schema.json  (+2 more)
(+1309 files in other folders)
